			     BZFlag Release Notes
			     ====================

BZFlag 2.1.x
------------

* Packetloss Kick - Thomas Stauer
* Fixed global banlist reload bug when using local bans - uso
* Callsign bans are now handled case-insensitively - Sean Morrison
* Added 'Dangerous' server-side spawn policy - Sean Morrison
* Fixed potential crash during server join - Alfredo Tupone, Sean Morrison
* Added new truely 'Random' server-side spawn policy - Sean Morrison
* Added server-side spawn policies, new -spawnPolicy bzfs option - Sean Morrison
* Allow the use of joystick pov hats/dpads - Stephan Hradek, Daniel Remenak
* Removed deprecated CLIENTQUERY command.  Use /clientquery - Daniel Remenak
* Fixed cross-platform and 64-bit network protocol bug - Andrew McNabb
* Added a NSIS script for Dev-C++ builds - UL_Approved
* Researched and updated BZFlag contributors documentation - Sean Morrison
* Message sounds consistently don't play when from self - Sean Morrison
* Input fixes and improvements (see ChangeLog) - Daniel Remenak, Jon Brandvein
* Flag hiding work even when Identity flag is on - Alfredo Tupone
* Flag grabbing & identifying made server side - Alfredo Tupone
* Jitter Kick - Thomas Stauer
* Automatic prompting, download and installation of updates - Daniel Remenak
* Append screenshots after the highest numbered existing one - Ian Agar
* Add /modcount to adjust countdown time from within game - Ian Agar
* Fix wrong kick if pausing having V and moving - Julio Jimenez
* Prevent bzfs denial-of-service infinite loop - Sean Morrison
* Minimize attempts to crash servers with malformed messages - Sean Morrison
* Do not inform hunters of stealthy prey - Ian Agar
* Bots share connection with main player - Alfredo Tupone
* Player List command works at least to show his own status - Thomas Stauer
* Bug fixed on countdown virtual capture - Alfredo Tupone
* Removing applauds when capturing its own flag - Alfredo Tupone
* End shot is sent by server on behalf of player - Alfredo Tupone